# fastpay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benchmark_client/: Cargo.toml
benchmark_client/src/: client.rs  coco_client.rs  connection.rs  error.rs  main.rs  transaction_maker.rs
benchmark_scripts/: .committee.json  .gitignore  .node-0.json  .node-1.json  .node-2.json  .node-3.json  .parameters.json  benchmark_server  fabfile.py  settings.json
benchmark_scripts/benchmark/: aggregate.py  commands.py  config.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
benchmark_scripts/data/: bench-0-10-1-True-1000.txt  bench-0-10-1-True-2000.txt  bench-0-10-1-True-2500.txt  bench-0-10-1-True-2600.txt  bench-0-10-10-True-10000.txt  bench-0-10-10-True-14000.txt  bench-0-10-10-True-15000.txt  bench-0-10-10-True-17000.txt  bench-0-10-10-True-20000.txt  bench-0-10-10-True-25000.txt  bench-0-10-10-True-3000.txt  bench-0-10-15-True-20000.txt  bench-0-10-15-True-25000.txt  bench-0-10-15-True-30000.txt  bench-0-10-16-True-20000.txt  bench-0-10-16-True-30000.txt  bench-0-10-20-True-25000.txt  bench-0-10-20-True-30000.txt  bench-0-10-30-True-30000.txt  bench-0-10-35-True-10000.txt  bench-0-10-35-True-19000.txt  bench-0-10-35-True-23000.txt  bench-0-10-35-True-25000.txt  bench-0-10-35-True-26000.txt  bench-0-10-35-True-30000.txt  bench-0-10-35-True-34000.txt  bench-0-10-35-True-35000.txt  bench-0-10-40-True-30000.txt  bench-0-10-40-True-40000.txt  bench-0-10-5-True-2500.txt  bench-0-10-5-True-5000.txt  bench-0-20-10-True-10000.txt  bench-0-20-10-True-12000.txt  bench-0-20-10-True-13000.txt  bench-0-20-10-True-15000.txt  bench-0-20-10-True-3000.txt  bench-0-20-10-True-4000.txt  bench-0-20-10-True-6000.txt  bench-0-20-10-True-7000.txt  bench-0-20-10-True-8000.txt  (+202 more)
benchmark_server/: Cargo.toml
benchmark_server/src/: config.rs  core.rs  error.rs  lib.rs  main.rs  receiver.rs  reliable_sender.rs
bulletproofs/: Cargo.toml
bulletproofs/src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  transcript.rs  util.rs
bulletproofs/src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
coconut/: Cargo.toml
coconut/src/: error.rs  issuance.rs  issue.rs  lagrange.rs  lib.rs  proof.rs  request.rs  setup.rs
coconut/src/tests/: common.rs  fixtures.rs  integration_tests.rs  issuance_tests.rs  issue_tests.rs  lagrange_tests.rs  proof_tests.rs  request_tests.rs  setup_tests.rs
fastpay/: Cargo.toml
fastpay/src/: bench.rs  benchmark_client.rs  benchmark_server.rs  client.rs  config.rs  lib.rs  network.rs  network_server.rs  server.rs  transport.rs
fastpay/src/unit_tests/: transport_tests.rs
fastpay_core/: Cargo.toml  generate-format.sh
fastpay_core/src/: account.rs  authority.rs  base_types.rs  client.rs  committee.rs  consensus.rs  error.rs  fastpay_smart_contract.rs  generate_format.rs  lib.rs  messages.rs  serialize.rs
fastpay_core/src/unit_tests/: authority_tests.rs  base_types_tests.rs  client_tests.rs  fastpay_smart_contract_tests.rs  messages_tests.rs  serialize_tests.rs
fastpay_core/tests/: format.rs
fastpay_core/tests/staged/: fastpay.yaml
rust/fastpay/: Cargo.toml
rust/fastpay/src/: bench.rs  client.rs  config.rs  lib.rs  network.rs  server.rs  transport.rs
rust/fastpay/src/unit_tests/: transport_tests.rs
rust/fastpay_core/: Cargo.toml
rust/fastpay_core/src/: authority.rs  base_types.rs  client.rs  committee.rs  downloader.rs  error.rs  fastpay_smart_contract.rs  lib.rs  messages.rs  serialize.rs
rust/fastpay_core/src/unit_tests/: authority_tests.rs  base_types_tests.rs  client_tests.rs  downloader_tests.rs  fastpay_smart_contract_tests.rs  messages_tests.rs  serialize_tests.rs
scripts/: aws_plot.py  fabfile.py  latency.py  latency_with_crash.py  microbenchmark.py  throughput.py
