[package]
name = "benchmark_client"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.1.0"
clap = "2.33.3"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
rand = "0.7.3"
failure = "0.1.8"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.51"
tokio-util = { version = "0.6.9", features = ["codec"] }
thiserror = "1.0.30"
benchmark_server = { path = "../benchmark_server" }
fastpay_core = { path = "../fastpay_core" }
