[package]
name = "bulletproofs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
merlin = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
clear_on_drop = "0.2.4"
sha3 = "0.8"
digest = "0.8"
byteorder = "1"
rand_core = "0.5"
serde = { version = "1", features = ["derive"] }
rand = "0.7"
subtle = "2"

[dev-dependencies]
bincode = "1"