[package]
name = "bulletproofs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
merlin = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
clear_on_drop = "0.2.4"
sha3 = "0.8"
digest = "0.8"
byteorder = "1"
rand_core = "0.5"
subtle = "2"
ff = "0.11.0"
group = "0.11.0"
sha2 = "0.9.8"
rand = "0.8.4"

[dependencies.bls12_381]
version = "0.6.1"
git = "https://github.com/matbd/bls12_381"
branch = "serde"
features = ["experimental"]

[dependencies.serde]
version = "1.0.130"
optional = true
default-features = true
features = ["derive"]

[dev-dependencies]
bincode = "1"

[features]
with_serde = ["serde", "bls12_381/serde", "curve25519-dalek/serde"]
with_equality = []