[package]
name = "coconut"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.4"
ff = "0.11.0"
sha2 = "0.9.8"
group = "0.11.0"
thiserror = "1.0.29"
merlin = "2"
bulletproofs = { path="../bulletproofs" }

[dependencies.bls12_381]
version = "0.6.1"
git = "https://github.com/matbd/bls12_381"
branch = "serde"
features = ["experimental"]

[dependencies.serde]
version = "1.0.130"
optional = true
default-features = true
features = ["derive"]

[features]
with_serde = ["serde", "bls12_381/serde"]
