[package]
name = "fastpay"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
bytes = "1.1.0"
clap = "2.33.3"
env_logger = "0.9.0"
failure = "0.1.8"
futures = "0.3.17"
log = "0.4.14"
net2 = "0.2.37"
rand = "0.7.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = "0.3.23"
tempfile = "3.2.0"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = { version = "1.0.51", optional = true }
tokio-util = { version = "0.6.9", features = ["codec"], optional = true }

fastpay_core = { path = "../fastpay_core" }
coconut = { path = "../coconut", features = ["with_serde"] }

[features]
benchmark = ["fastpay_core/benchmark", "anyhow", "tokio-util"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 
