[package]
name = "fastpay"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.3"
log = "0.4.6"
net2 = "0.2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }

fastpay_core = { path = "../fastpay_core" }

[dependencies.ed25519-dalek]
version = "=1.0.0-pre.1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
