[package]
name = "fastpay_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.11"
bincode = "1.2"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.3"
log = "0.4.6"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

[dependencies.ed25519-dalek]
version = "=1.0.0-pre.1"
