[package]
name = "fastpay_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.12.0"
bincode = "1.2.1"
failure = "0.1.7"
futures = "0.3.4"
log = "0.4.8"
rand = "=0.6.5"
serde = { version = "1.0.106", features = ["derive"] }
tokio = { version = "0.2.16", features = ["full"] }
ed25519-dalek = "=1.0.0-pre.1"
